force-app/main/default/objects/Placement__c/fields/AM_Split__c.field-meta.xml
<CustomField>
    <fullName>AM_Split__c</fullName>
    <label>AM Split %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>