force-app/main/default/objects/Placement__c/fields/Amount_Paid_to_Rachel__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_to_Rachel__c</fullName>
    <label>Amount Paid to Rachel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>