force-app/main/default/objects/Placement__c/fields/Approved_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Approved_Time_Off__c</fullName>
    <label>Approved Time Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>