force-app/main/default/objects/Placement__c/fields/Back_Office_Approved__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Office Approved</label>
    <type>Checkbox</type>
</CustomField>