force-app/main/default/objects/Placement__c/fields/BD_Split__c.field-meta.xml
<CustomField>
    <fullName>BD_Split__c</fullName>
    <label>BD Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>