force-app/main/default/objects/Placement__c/fields/BD_User_Report__c.field-meta.xml
<CustomField>
    <fullName>BD_User_Report__c</fullName>
    <formula>IF(Biz_Dev_Rep__r.Id = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BD User Report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>