force-app/main/default/objects/Placement__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <label>Bill Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>