force-app/main/default/objects/Placement__c/fields/Biz_Dev_Rep__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements3</relationshipName>
    <type>Lookup</type>
</CustomField>