force-app/main/default/objects/Placement__c/fields/Bonus_Commission__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission__c</fullName>
    <label>Bonus/Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>