force-app/main/default/objects/Placement__c/fields/Callback_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Callback_Bill_Rate__c</fullName>
    <label>Callback Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>