force-app/main/default/objects/Placement__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backed out</fullName>
            </value>
            <value>
                <fullName>Candidate unresponsive</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t pass minimum standards for credentialing</fullName>
            </value>
            <value>
                <fullName>Took another job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>