force-app/main/default/objects/Placement__c/fields/Candidate_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Created_Date__c</fullName>
    <formula>Candidate__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Created Date</label>
    <type>DateTime</type>
</CustomField>