force-app/main/default/objects/Placement__c/fields/Candidate_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Lead_Source__c</fullName>
    <formula>TEXT( Candidate__r.LeadSource)</formula>
    <label>Candidate Lead Source</label>
    <type>Text</type>
</CustomField>