force-app/main/default/objects/Placement__c/fields/Candidate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Mobile__c</fullName>
    <formula>Candidate__r.MobilePhone</formula>
    <label>Candidate Mobile</label>
    <type>Text</type>
</CustomField>