force-app/main/default/objects/Placement__c/fields/Candidate_Other_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Other_Reimbursement__c</fullName>
    <label>Candidate Other Reimbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>