force-app/main/default/objects/Placement__c/fields/Candidate_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements4</relationshipName>
    <type>Lookup</type>
</CustomField>