force-app/main/default/objects/Placement__c/fields/Candidate_SC_Offer_Letter_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_SC_Offer_Letter_Status__c</fullName>
    <label>Candidate/SC Offer Letter Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Perm Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>