force-app/main/default/objects/Placement__c/fields/Candidate_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_SF_ID__c</fullName>
    <formula>CASESAFEID(Candidate__c)</formula>
    <label>Candidate SF ID</label>
    <type>Text</type>
</CustomField>