force-app/main/default/objects/Placement__c/fields/Centra_Appproval_Status__c.field-meta.xml
<CustomField>
    <fullName>Centra_Appproval_Status__c</fullName>
    <label>Centra Appproval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>