force-app/main/default/objects/Placement__c/fields/CentraRecruiter__c.field-meta.xml
<CustomField>
    <fullName>CentraRecruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CentraRecruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements5</relationshipName>
    <type>Lookup</type>
</CustomField>