force-app/main/default/objects/Placement__c/fields/Charge_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Charge_Bill_Rate__c</fullName>
    <label>Charge Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>