force-app/main/default/objects/Placement__c/fields/Client_Confirmation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Confirmation_Notes__c</fullName>
    <formula>Account__r.Client_Confirmation_Notes__c</formula>
    <label>Client Confirmation Notes</label>
    <type>Text</type>
</CustomField>