force-app/main/default/objects/Placement__c/fields/Client_Eval_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Eval_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Eval Sent</label>
    <type>Checkbox</type>
</CustomField>