force-app/main/default/objects/Placement__c/fields/Client_Float_Policy__c.field-meta.xml
<CustomField>
    <fullName>Client_Float_Policy__c</fullName>
    <label>Client Float Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>