force-app/main/default/objects/Placement__c/fields/Client_Other_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Client_Other_Reimbursement__c</fullName>
    <label>Client Other Reimbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>