force-app/main/default/objects/Placement__c/fields/Credential_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credential_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credential Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements6</relationshipName>
    <type>Lookup</type>
</CustomField>