force-app/main/default/objects/Placement__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <label>Credentialing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved w/ Override</fullName>
            </value>
            <value>
                <fullName>Working Out of Compliance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>