force-app/main/default/objects/Placement__c/fields/Current_Active_Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Deal_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Active Deal Sheet</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>