force-app/main/default/objects/Placement__c/fields/Current_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the most recently created/active Project record for this Placement.</description>
    <inlineHelpText>The current operational project record linked to this placement.</inlineHelpText>
    <label>Current Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>