force-app/main/default/objects/Placement__c/fields/Current_Status_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Legacy__c</fullName>
    <label>Current Status Legacy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>LINKNAME</fullName>
            </value>
            <value>
                <fullName>OUT Closed</fullName>
            </value>
            <value>
                <fullName>OUT Match</fullName>
            </value>
            <value>
                <fullName>Out NLI</fullName>
            </value>
            <value>
                <fullName>OUT Nohire</fullName>
            </value>
            <value>
                <fullName>OUT OthJob</fullName>
            </value>
            <value>
                <fullName>OUT Unresp</fullName>
            </value>
            <value>
                <fullName>Pacific 1</fullName>
            </value>
            <value>
                <fullName>PERM Acc</fullName>
            </value>
            <value>
                <fullName>Permanent Placement</fullName>
            </value>
            <value>
                <fullName>TEMP ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>