force-app/main/default/objects/Placement__c/fields/Date_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_Accepted__c</fullName>
    <label>Date Accepted</label>
    <type>Date</type>
</CustomField>