force-app/main/default/objects/Placement__c/fields/Date_Paid_to_Rachel__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid_to_Rachel__c</fullName>
    <label>Date Paid to Rachel</label>
    <type>Date</type>
</CustomField>