force-app/main/default/objects/Placement__c/fields/Days_Place_to_Start__c.field-meta.xml
<CustomField>
    <fullName>Days_Place_to_Start__c</fullName>
    <description># Days from Placement to Start</description>
    <formula>Start_Date__c  - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Place to Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>