force-app/main/default/objects/Placement__c/fields/Days_Till_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Till_End__c</fullName>
    <formula>IF (NOT(ISNULL(End_Date__c)),End_Date__c - Today(),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Till End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>