force-app/main/default/objects/Placement__c/fields/DealSheet_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>DealSheet_Gross_Margin__c</fullName>
    <label>DealSheet Gross Margin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>