force-app/main/default/objects/Placement__c/fields/DealSheet_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>DealSheet_Hours_Per_Week__c</fullName>
    <label>DealSheet Hours Per Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>