force-app/main/default/objects/Placement__c/fields/Default_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Default_Cost_Center__c</fullName>
    <formula>Client__r.Default_Cost_Center__c</formula>
    <label>Default Cost Center</label>
    <type>Text</type>
</CustomField>