force-app/main/default/objects/Placement__c/fields/Double_Time_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Pay_Rate__c</fullName>
    <label>Double Time Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>