force-app/main/default/objects/Placement__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>Candidate__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>