force-app/main/default/objects/Placement__c/fields/Existing_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Existing_Agreements__c</fullName>
    <formula>Account__r.Existing_Agreements_Text__c</formula>
    <label>Existing Agreements</label>
    <type>Text</type>
</CustomField>