force-app/main/default/objects/Placement__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extension</label>
    <type>Checkbox</type>
</CustomField>