force-app/main/default/objects/Placement__c/fields/Extension_Consideration_for_Client__c.field-meta.xml
<CustomField>
    <fullName>Extension_Consideration_for_Client__c</fullName>
    <formula>Account__r.Extension_Consideration_for_Client__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Consideration for Client</label>
    <type>Text</type>
</CustomField>