force-app/main/default/objects/Placement__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <formula>Account__r.ShippingStreet&amp;&quot; &quot;&amp;  Account__r.ShippingCity &amp;&quot; &quot;&amp;
 Account__r.ShippingState &amp;&quot; &quot;&amp;  Account__r.ShippingPostalCode</formula>
    <label>Facility Address</label>
    <type>Text</type>
</CustomField>