force-app/main/default/objects/Placement__c/fields/Feedback_has_been_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Feedback_has_been_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback has been Submitted</label>
    <type>Checkbox</type>
</CustomField>