force-app/main/default/objects/Placement__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>(VALUE( Bill_Rate__c ) - VALUE( Pay_Rate__c ) ) / VALUE(  Bill_Rate__c  )</formula>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>