force-app/main/default/objects/Placement__c/fields/Guaranteed_Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Hours_Per_Week__c</fullName>
    <label>Guaranteed Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>