force-app/main/default/objects/Placement__c/fields/Guaranteed_Hours_Provision__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Hours_Provision__c</fullName>
    <formula>Account__r.Guaranteed_Hours_Provision__c</formula>
    <label>Guaranteed Hours Provision</label>
    <type>Text</type>
</CustomField>