force-app/main/default/objects/Placement__c/fields/Holiday_Hours_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Hours_Bill_Rate__c</fullName>
    <label>Holiday Hours Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>