force-app/main/default/objects/Placement__c/fields/Invoice_Burden__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Burden__c</fullName>
    <label>Invoice Burden %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>