force-app/main/default/objects/Placement__c/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <formula>TEXT( Job__r.Job_Category__c)</formula>
    <label>Job Category</label>
    <type>Text</type>
</CustomField>