force-app/main/default/objects/Placement__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <formula>TEXT( Job__r.Job_Type__c )</formula>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>