force-app/main/default/objects/Placement__c/fields/Legacy_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Assignment_Type__c</fullName>
    <label>Legacy Assignment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>