force-app/main/default/objects/Placement__c/fields/Legacy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_End_Date__c</fullName>
    <label>Legacy End Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>