force-app/main/default/objects/Placement__c/fields/Lodging_Daily__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Daily__c</fullName>
    <label>Lodging Daily</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>