force-app/main/default/objects/Placement__c/fields/Lodging_Per_Shift__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Per_Shift__c</fullName>
    <label>Lodging Per Shift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>