force-app/main/default/objects/Placement__c/fields/M_I__c.field-meta.xml
<CustomField>
    <fullName>M_I__c</fullName>
    <label>M &amp; I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>